# svarog-algebra

cl-playground/: Cargo.toml
classgroup/: Cargo.toml
curve-abstract/: Cargo.toml
curve-abstract/src/: lib.rs
secp256k1-sys/: Cargo.toml  README.md  build.rs
secp256k1-sys/depend/secp256k1/include/: secp256k1.h
secp256k1-sys/depend/secp256k1/src/: secp256k1.c  svarog_algebra_impl.h
secp256k1-sys/src/: lib.rs
svarog-curve25519/: Cargo.toml
svarog-curve25519/src/: curve.rs  scalar.rs
svarog-lagrange/: Cargo.toml
svarog-lagrange/src/: keystore.rs  lib.rs  polynomial.rs  tests.rs
svarog-secp256k1/: Cargo.toml
svarog-secp256k1/src/: curve.rs  point.rs  scalar.rs
