[package]
name = "cl-playground"
version = "0.1.0"
edition = "2024"

# [[bin]]
# name = "playground"

# [[bin]]
# name = "primes"

# [[bin]]
# name = "primes2"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = "4.5.47"
classgroup = { path = "../classgroup" }
indicatif = { version = "0.18.0" }
memmap2 = "0.9.8"
rug = { version = "1.28.1", features = ["serde"] }
